<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProgramActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="8dp"
        style="@style/card_view1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_book" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:text="@string/text_book"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_version"
        android:layout_below="@id/textView4"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:gravity="start"
                android:text="@string/text_autor" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>