<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context=".HomeActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/text_witaj"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:onClick="goNext"
                android:text="@string/button_next"
                android:textColor="@android:color/widget_edittext_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                    android:orientation="vertical">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view1"
                        style="@style/card_view1"
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginTop="60dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginLeft="8dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/ic_library_books" />


                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="80dp"
                                android:layout_marginLeft="80dp"
                                android:text="@string/text_czytaj" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view2"
                        style="@style/card_view1"
                        android:layout_width="match_parent"
                        android:layout_height="135dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginLeft="8dp"
                                android:contentDescription="@string/todo"
                                app:srcCompat="@drawable/ic_message" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="80dp"
                                android:layout_marginLeft="80dp"
                                android:text="@string/text_zostaw" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

        </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/home_activity"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>